--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^3.5.0",
     "html-react-parser": "^4.2.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
@@ -32,6 +33,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://api.coingecko.com",
   "browserslist": {
     "production": [
       ">0.2%",
