--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "chart.js": "^3.5.0",
+    "firebase": "^10.3.0",
     "html-react-parser": "^4.2.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
