--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "chart.js": "^3.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "firebase": "^10.3.0",
+    "graphql": "^16.8.0",
     "html-react-parser": "^4.2.1",
+    "mongoose": "^7.4.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-chartjs-2": "^4.0.0",
