--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.4.0",
     "chart.js": "^3.5.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "firebase": "^10.3.0",
-    "graphql": "^16.8.0",
+    "graphql": "^15.8.0",
     "html-react-parser": "^4.2.1",
+    "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
@@ -32,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "nodemon": "^3.0.1"
   }
 }
