--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.140",
@@ -19,6 +20,7 @@
     "firebase": "^10.3.0",
     "graphql": "^15.8.0",
     "html-react-parser": "^4.2.1",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
     "react": "^18.2.0",
