--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-server-express": "^3.12.0",
     "axios": "^1.4.0",
     "chart.js": "^3.5.0",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "express-graphql": "^0.12.0",
     "firebase": "^10.3.0",
     "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
     "html-react-parser": "^4.2.1",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
