--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.2.0"
+  },
+  "dependencies": {
+    "firebase-admin": "^11.10.1"
   }
 }
