--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "concurrently": "^5.2.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
     "firebase-admin": "^11.10.1"
   }
 }
